// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`FormSwitch ENCOURA theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root css-4ri1sv-MuiFormControl-root"
  >
    <label
      class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-9ttzdx-MuiFormControlLabel-root"
      id="uniqueId"
    >
      <span
        class="MuiSwitch-root MuiSwitch-sizeMedium css-v1ntyu-MuiSwitch-root"
      >
        <span
          class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary css-gujzlz-MuiButtonBase-root-MuiSwitchBase-root-MuiSwitch-switchBase"
        >
          <input
            class="PrivateSwitchBase-input MuiSwitch-input css-12xagqm-MuiSwitchBase-root"
            role="switch"
            type="checkbox"
          />
          <span
            class="MuiSwitch-thumb css-1uu3p77-MuiSwitch-thumb"
          />
        </span>
        <span
          class="MuiSwitch-track css-1w2d6go-MuiSwitch-track"
        />
      </span>
      <span
        class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-vt4fc5-MuiTypography-root"
      >
        Form Switch Label
      </span>
    </label>
  </div>
</div>
`;

exports[`FormSwitch ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root css-4ri1sv-MuiFormControl-root"
  >
    <label
      class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-1ijgvmu-MuiFormControlLabel-root"
      id="uniqueId"
    >
      <span
        class="MuiSwitch-root MuiSwitch-sizeMedium css-kgh0wo-MuiSwitch-root"
      >
        <span
          class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary css-135tj7d-MuiButtonBase-root-MuiSwitchBase-root-MuiSwitch-switchBase"
        >
          <input
            class="PrivateSwitchBase-input MuiSwitch-input css-12xagqm-MuiSwitchBase-root"
            role="switch"
            type="checkbox"
          />
          <span
            class="MuiSwitch-thumb css-1uu3p77-MuiSwitch-thumb"
          />
        </span>
        <span
          class="MuiSwitch-track css-1w2d6go-MuiSwitch-track"
        />
      </span>
      <span
        class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-vt4fc5-MuiTypography-root"
      >
        Form Switch Label
      </span>
    </label>
  </div>
</div>
`;

exports[`FormSwitch ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root css-m2i688-MuiFormControl-root"
  >
    <label
      class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-5lqx6n-MuiFormControlLabel-root"
      id="uniqueId"
    >
      <span
        class="MuiSwitch-root MuiSwitch-sizeMedium css-rehya9-MuiSwitch-root"
      >
        <span
          class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary css-u184il-MuiButtonBase-root-MuiSwitchBase-root-MuiSwitch-switchBase"
        >
          <input
            class="PrivateSwitchBase-input MuiSwitch-input css-12xagqm-MuiSwitchBase-root"
            role="switch"
            type="checkbox"
          />
          <span
            class="MuiSwitch-thumb css-1s5eau1-MuiSwitch-thumb"
          />
        </span>
        <span
          class="MuiSwitch-track css-tj8d99-MuiSwitch-track"
        />
      </span>
      <span
        class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-azabt7-MuiTypography-root"
      >
        Form Switch Label
      </span>
    </label>
  </div>
</div>
`;

exports[`FormSwitch ENCOURAGE_E4E theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root css-ypopnc-MuiFormControl-root"
  >
    <label
      class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-1hu42yv-MuiFormControlLabel-root"
      id="uniqueId"
    >
      <span
        class="MuiSwitch-root MuiSwitch-sizeMedium css-169sx1-MuiSwitch-root"
      >
        <span
          class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary css-lotx7k-MuiButtonBase-root-MuiSwitchBase-root-MuiSwitch-switchBase"
        >
          <input
            class="PrivateSwitchBase-input MuiSwitch-input css-12xagqm-MuiSwitchBase-root"
            role="switch"
            type="checkbox"
          />
          <span
            class="MuiSwitch-thumb css-17jyosd-MuiSwitch-thumb"
          />
        </span>
        <span
          class="MuiSwitch-track css-1h0w15v-MuiSwitch-track"
        />
      </span>
      <span
        class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1hvcons-MuiTypography-root"
      >
        Form Switch Label
      </span>
    </label>
  </div>
</div>
`;
